main-prefixed.css
/* ... */
.project-description {
    -webkit-box-flex: 3;
        -ms-flex: 3;
            flex: 3;
}

.project-description p {
    text-align: left;
    margin-bottom: 2rem ;
}

#contact {
    margin-top: 1rem;
}

/* mobile mode smaller than big tablet */
@media (max-width: 1024px) {
    #landing {
        background-image: -o-radial-gradient(top left, circle, #99f8ff, #007ea5, #004a61, transparent, transparent, transparent);
        background-image: radial-gradient(circle at top left, #99f8ff, #007ea5, #004a61, transparent, transparent, transparent);
    }
    #hero-text {
        left: 50%;
        top: 50%;
        -webkit-transform: translate(-50%, -50%);
            -ms-transform: translate(-50%, -50%);
                transform: translate(-50%, -50%);
        width: 95%;
    }
    #svg-text {
        width: 100%;
    }
    #continue-to-portfolio {
        font-size: 1rem;
    }

    #home {
        padding: 0.5rem;
    }

    #about-me__info {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;

    }
    #about-me__image {
        margin-bottom: 1.5rem;
    }
    #about-me__text {
        text-align: center;
        -webkit-box-pack: center;
            -ms-flex-pack: center;
                justify-content: center;
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
    }

    #key-skills {
        max-width: 100%;
    }
    .slider::before, .slider::after {
        width: 150px;
    }

    .project {
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
        -webkit-box-pack: center;
            -ms-flex-pack: center;
                justify-content: center;
    }
    .carousel {
        width: 100%;
        margin-bottom: 1rem;
        margin-right: 0;
    }
    .img {
        width: 90vw;
        height: -webkit-fit-content;
        height: -moz-fit-content;
        height: fit-content;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: center;
            -ms-flex-pack: center;
                justify-content: center;
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
    }
    .project__image {
        max-height: 300px;
        max-width: 100%;
    }


    #projects {
        width: 95vw;
    }
    .project {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;
    }
    .project-container {
        padding: 0.5rem;
        padding-bottom: 2rem;
    }
    .project-description p {
        text-align: center;
        margin-bottom: 1.5rem;
    }
}

